test/asm/command-line-symbols.err
error: command-line-symbols.asm(3):
    'FOO' already defined at <command-line>
    (should it be {interpolated} to define its contents "hello"?)
error: Assembly aborted (1 error)!
